# localqtl

./: pyproject.toml
localqtl/: __init__.py  __main__.py  _independent.py  _nominal.py  _permutation.py  cis.py  core.py  haplotypeio.py  helper.py  local.py  localqtl.py  post.py  utils.py
tensorqtl/: local.py
