[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["localqtl"]

[project]
name = "localqtl"
version = "0.1.0"
dependencies = [
    "numpy",
    "pandas",
    "Pgenlib>=0.90.1",
    "qtl",
    "scipy",
    "torch",
    "rfmix-reader"
]
authors = [
    {name = "Francois Aguet", email = "francois@broadinstitute.org"},
    {name = "Kynon J Benjamin", email = "kj.benjamin90@gmail.com"}
]
maintainers = [
    {name = "Francois Aguet", email = "francois@broadinstitute.org"},
    {name = "Kynon J Benjamin", email = "kj.benjamin90@gmail.com}"}
]
description = "Local Ancestry GPU-accelerated QTL mapper"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["Quantitative trait loci", "Local ancestry"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
Repository = "https://github.com/KrotosBenjamin/localqtl.git"
